# Framless-Demo-For-Slint

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.rc
src/: main.cpp
src/utils/: EnableWindowShadow.cpp  EnableWindowShadow.h
ui/: main.slint
ui/components/: icons.slint  theme.slint  title.slint
